--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-VITE_APP_ENV=production
+VITE_APP_ENV=local
 VITE_APP_NAME=Support
 VITE_APP_HOSTNAME=localhost
 VITE_APP_ORIGIN=http://localhost:5173
